# personal-site

./: .gitignore  Blake Espeland Resume.docx  Blake_Espeland_Resume.docx  Cargo.toml  Makefile  index.html  index.scss  script.js  style.css
personalsite/: package-lock.json
src/: main.rs
src/background/: boid.rs  math.rs  mod.rs  settings.rs  simulation.rs
src/list/: header.rs  item.rs  list.rs  mod.rs
src/media/: about.rs  button.rs  mod.rs  title.rs
src/projects/: cepa.rs  container.rs  curve_est.rs  mod.rs  model_forge.rs  rnn.rs  sprayer_mods.rs  sprayermods.rs
